# stm32disc

./: Cargo.toml  accel.txt  data.txt  data.txt2  openocd.gdb  plot.py  plot_mag.py  plot_roll_pitch.py
.cargo/: config.toml
aux/: Cargo.toml
aux/src/: lib.rs
plot/: plot_accel.py  plot_roll_pitch.py
src/: accel.rs  complementary.rs  lib.rs  mag.rs  mag2.rs  main.rs  sensors.rs
